Github link color fix for dark and high-contrast.
The default dark-blue was hard to see.

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -82,11 +82,21 @@
         &--dm
         {
             color: $color_white;
+
+            & a
+            {
+                color: $color_medium_gray;
+            }
         }
 
         &--hcm
         {
             color: $color_light_yellow;
+
+            & a
+            {
+                color: $color_orange;
+            }
         }
     }
 
